# KNN-Server-Classification

./: CMakeLists.txt  README.md  main.cpp  makefile
build-for-linux/: CMakeCache.txt  Makefile  cmake_install.cmake
calculate/: Canberra.cpp  Canberra.h  Chebyshev.cpp  Chebyshev.h  Distance.h  Euclidean.cpp  ICommand.cpp  ICommand.h  Manhattan.cpp  Manhattan.h  Minkowski.cpp  Minkowski.h  ReadCSV.cpp  ReadCSV.h  input.cpp  input.h
calculate/Algorithim/: CSVStruct.h  Knn.cpp  Knn.h  Select.cpp  Select.h
calculate/Distance/: Distance.cpp  Distance.h  Minkowski.cpp
calculate/IO/: DefaultIO.cpp  DefaultIO.h  FileIO.cpp  FileIO.h  SocketIO.cpp  SocketIO.h  StandardIO.cpp  StandardIO.h
calculation/: Distance.cpp  Distance.h
client/: Client.cpp  Client.h  clientMain.cpp
resources/datasets/: iris_classified.csv  ‏‏מסמך טקסט חדש.txt
server/: Server.cpp  Server.h  serverMain.cpp
src/: DataStructs.h  ReadCSV.cpp  ReadCSV.h  input.cpp  input.h
src/Algorithim/: CSVStruct.h  Knn.cpp  Knn.h  Select.cpp  Select.h
src/Commands/: CLI.cpp  CLI.h  ICommand.cpp  ICommand.h  UploadFilesCommand.cpp  UploadFilesCommand.h
src/Commands/clientCommands/: AlgorithemSettingClientCommand.cpp  AlgorithemSettingClientCommand.h  ClassifyDataClientCommand.cpp  ClassifyDataClientCommand.h  DisplayClientCommand.cpp  DisplayClientCommand.h  DownloadClientCommand.cpp  DownloadClientCommand.h  UploadFilesClientCommand.cpp  UploadFilesClientCommand.h
src/Commands/clientCommeds/: AlgorithemSettingClientCommand.cpp  AlgorithemSettingClientCommand.h  ClassifyDataClientCommand.cpp  ClassifyDataClientCommand.h  DisplayClientCommand.cpp  DisplayClientCommand.h  DownloadClientCommand.cpp  DownloadClientCommand.h  UploadFilesClientCommand.cpp  UploadFilesClientCommand.h  downloadClientCommand.cpp  downloadClientCommand.h
src/Commands/serverCommands/: AlgorithemSettingServerCommand.cpp  AlgorithemSettingServerCommand.h  ClassifyDataServerCommand.cpp  ClassifyDataServerCommand.h  DisplayServerCommand.cpp  DisplayServerCommand.h  DownloadServerCommand.cpp  DownloadServerCommand.h  EndingConnection.cpp  EndingConnection.h  ServerCommands.cpp  ServerCommands.h  UploadFilesServerCommand.cpp  UploadFilesServerCommand.h  downloadServerCommand.cpp
src/Distance/: Canberra.cpp  Canberra.h  Chebyshev.h  Distance.h  Euclidean.h  Manhattan.h  Minkowski.cpp
src/IO/: DefaultIO.cpp  DefaultIO.h  FileIO.cpp  FileIO.h  SocketIO.cpp  SocketIO.h  StandardIO.cpp
